--- a/main.css
+++ b/main.css
@@ -424,3 +424,10 @@ button {
   font-size: small;
   font-weight: bold;
 }
+
+.arrowsInModal{
+  background-color: #6c86d2ff;
+}
+.head .btn, .modal-footer .btn{
+  background-color: #70a6caff;
+}
